--- a/Calculadora/site.css
+++ b/Calculadora/site.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap');
-
 h1,h2,h3,p,label,button{
     font-family: 'Arial';
 }
@@ -12,13 +10,25 @@ h1,h2,h3,p,label,button{
     border: 3px solid;
     border-radius: 50px;
     border-color: black;
+    
 }
 
 #numero{
     margin: 30px auto;
 }
 
+#operacoes{
+    padding-top: 30px;
+    margin: auto;
+}
+
+button{
+    cursor: pointer;
+}
+
 #botao{
+    text-align: center;
+    align-content: center;
     font-size: 40px;
     background-color: #33A46A;
     border-color: #33A46A;
@@ -27,10 +37,14 @@ h1,h2,h3,p,label,button{
     height: 80px;
 }
 
-#botaoLinha{
-    padding-top: 30px;
-}
-
-#foto{
-    
+#botaoReset{
+    text-align: center;
+    align-content: center;
+    background-color: #cf4242;
+    border-color: #cf4242;
+    border-radius: 10px;
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    transform: translate(60%, -50%);
 }
